# stemscrape

./: .gitignore  README.md  copy_logos.py  extract_opportunities.py  extract_partners.py  fill_partners.py  opportunities_analysis.ipynb  pyproject.toml  requirements.txt  scrape.py
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
data/: partners.csv  partners.jsonl  partners_augmented.csv
docs/: index.html
docs/about/: index.html
docs/collab-lab/: index.html
docs/contact/: index.html
docs/december-2018-newsletter/: index.html
docs/disclaimer/: index.html
docs/early-childhood/: index.html
docs/escondido/: index.html
docs/faq/: index.html
docs/filter/tips/: index.html
docs/find-opportunities/: index.html
docs/find-opportunities/1000-stem-grants-use-engineering-software/: index.html
docs/find-opportunities/2022-technology-adventure-camp-scholarships/: index.html
docs/find-opportunities/2023-advanced-materials-research-experiences-teachers/: index.html
docs/get-involved/: index.html
docs/newsletters-102018-current/: index.html
docs/november-2018-newsletter/: index.html
docs/october-2018-newsletter/: index.html
docs/partners/: index.html
docs/privacy-policy/: index.html
docs/provide-opportunity/: index.html
docs/references/: index.html
docs/role-model/: index.html
docs/security/: index.html
docs/stem-news/: index.html
docs/work-based-learning/: index.html
stemscrape/: __init__.py  __main__.py  crawler.py  rewriter.py  sitemap.py
tests/: test_rewriter.py  test_sitemap.py
(+1184 files in other folders)
