[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stemscrape"
version = "0.1.0"
description = "Mirror the San Diego STEM Ecosystem website for GitHub Pages"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "advertools>=0.13",
    "tqdm>=4.66",
    "tenacity>=8.2",
]

[project.scripts]
stemscrape = "stemscrape.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
